added the completed html/css pages and images

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1>Daniel Murphy</h1>
         </div>
         <!-- Nav bar buttons -->
+
         <ul>
             <li>
                 <a href="contact.html">
@@ -37,6 +38,7 @@
 
 
 
+
     </div>
     <div class="about">
         <h2>About Me</h2>
@@ -44,24 +46,26 @@
         <div class="content">
             <hr>
             <p>
-                <img class="image" src="assets/images/profile-pic.PNG" alt="Daniel Murphy Photo" />Greetings and salutations! As you can already tell from this page my name is Daniel Murphy, and currently,
-                I am learning how to code! So far the learning process has been a roller coaster with several ups and downs,
-                but once that piece of code finally works, well there's nothing quite like that feeling.</p>
+                <img class="image" src="assets/images/profile-pic.PNG" alt="Daniel Murphy Photo" />Greetings and salutations!
+                As you can already tell from this page my name is Daniel Murphy, and currently, I am learning how to code!
+                So far the learning process has been a roller coaster with several ups and downs, but once that piece of
+                code finally works, well there's nothing quite like that feeling.</p>
 
-            <p>So a little bit about me...where to begin? Well, I graduated from UCF with a degree in Psychology way back in
-                May of 2013. If I am being honest, I became bored with Psychology during my Junior year but decided to finish
-                up the degree because I didn't really know what else to do. After graduation, I left my psychology degree
-                to the dust on my wall and ventured into various fields of work including financial work (as an assistant
+            <p>So a little bit about me...where to begin? Well, I graduated from UCF with a degree in Psychology way back
+                in May of 2013. If I am being honest, I became bored with Psychology during my Junior year but decided to
+                finish up the degree because I didn't really know what else to do. After graduation, I left my psychology
+                degree to the dust on my wall and ventured into various fields of work including financial work (as an assistant
                 or file keeper or whatever), insurance, and food service. All these jobs were fun and interesting at first,
                 but after a while, I felt the need to move on.</p>
 
-            <p>I re-enrolled at UCF in the fall of 2015, this time with my sights set on an English degree with a focus in Technical
-                Communication or Technical Writing. I stumbled onto the technical writing path through my interest in creative
-                writing and while I was searching for some type of freelance writing job, I kept finding positions for "Technical
-                Writers". After a few minutes of Google research, I came to the conclusion that technical writing was something
-                I could learn to do that would allow me to hone certain writing skills while also providing me with a creative
-                outlet. The paycheck for these positions was a nice motivator too. Needless to say, I was headed back to
-                UCF.</p>
+            <p>I re-enrolled at UCF in the fall of 2015, this time with my sights set on an English degree with a focus in
+                Technical Communication or Technical Writing. I stumbled onto the technical writing path through my interest
+                in creative writing and while I was searching for some type of freelance writing job, I kept finding positions
+                for "Technical Writers". After a few minutes of Google research, I came to the conclusion that technical
+                writing was something I could learn to do that would allow me to hone certain writing skills while also providing
+                me with a creative outlet. The paycheck for these positions was a nice motivator too. Needless to say, I
+                was headed back to UCF.
+            </p>
 
             <p>While in the last semester of my technical writing degree, I enrolled in a beginners coding class which taught
                 HTML and CSS. At the beginning of the course, I thought I might have made a mistake as the majority of the
