--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         </ul>
 
     </div>
-    <div class="about">
+    <div class="portfolio">
         <h2>Portfolio</h2>
 
         <div class="portfolio-container">
@@ -46,7 +46,7 @@
 
                 <div class="img-wrapper">
 
-                    <img class="portfolio-image shadow" src="assets/images/hangman-pic.jpg" alt="Hangman Game Link"></img>
+                    <img class="portfolio-image shadow" src="assets/images/hangman-pic.jpg" alt="Hangman Game Link">
                     <div class="image-text">
                         <p>Hangman Game</p>
 
@@ -54,14 +54,14 @@
                 </div>
 
                 <div class="img-wrapper">
-                    <img class="portfolio-image shadow" src="assets/images/trivia-pic.jpg" alt="Trivia Game Link"></img>
+                    <img class="portfolio-image shadow" src="assets/images/trivia-pic.jpg" alt="Trivia Game Link">
                     <div class="image-text">
                         <p>Trivia Game</p>
                     </div>
                 </div>
 
                 <div class="img-wrapper">
-                    <img class="portfolio-image shadow" src="assets/images/rps-pic.jpg" alt="Rock-Paper-Scissors Game Link"></img>
+                    <img class="portfolio-image shadow" src="assets/images/rps-pic.jpg" alt="Rock-Paper-Scissors Game Link">
                     <div class="image-text">
                         <p>Rock-Paper-Scissors</p>
                     </div>
